UI Improvments and Fixes - Fixed blur not appearing in some place where it should have. - Improved contrast - Made the theme a bit darker

--- a/style.css
+++ b/style.css
@@ -31,20 +31,6 @@ body {
     height: 100vh;
 }
 
-.container-box {
-    border-radius: 10px;
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-    background-color: rgb(255 255 255 / 0.3);
-    backdrop-filter: blur(26px) saturate(110%);
-    color: rgb(255, 255, 255);
-    text-shadow: 0px 0px 20px rgba(6, 27, 65, 0.2);
-    font-weight: 600;
-    margin: 5px;
-    position: relative;
-    max-width: 600px;
-    min-width: 300px;
-    width: 100%;
-}
 
 input {
     width: 100%;
@@ -59,15 +45,41 @@ input {
     font-size: 1.25rem;
     flex-grow: 1;
     font-weight: 500;
-    color: white;
     text-indent: 20px;
     margin: 0px;
     margin-bottom: 2px;
+    border-radius: 10px;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 20px rgba(6, 27, 65, 0.2);
+    max-width: 600px;
+    min-width: 300px;
+    width: 100%;
+    background-color: rgba(92, 92, 92, 0.4); 
+    backdrop-filter: blur(100px) saturate(110%);
+}
+
+#location-input:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: rgb(255, 255, 255);
+}
+
+#location-input::placeholder {
+    color: rgb(255, 255, 255);
+}
+
+#location-input::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(100px) saturate(110%);
 }
 
 #location-input:focus{
     outline: solid 4px rgba(0, 0, 0, 0.25);
-    background-color: rgba(196, 196, 196, 0.3);;
+    background-color: rgba(0, 0, 0, 0.8);;
 }
 
 #location-input::placeholder {
@@ -77,20 +89,59 @@ input {
 #main-container {
     height: 400px;
     overflow: hidden;
+    display: block;
+    border-radius: 10px;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+    background-color: rgba(92, 92, 92, 0.4);
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 20px rgba(6, 27, 65, 0.2);
+    font-weight: 600;
+    margin: 5px;
+    position: relative;
+    max-width: 600px;
+    min-width: 300px;
+    width: 100%;
+    transition: background 0.5s ease;    
+}
+
+#main-container::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(26px) saturate(110%);
 }
 
 #autocomplete-box {
     padding-left: 20px;
     margin: -20px;
     margin-top: 0px;
-    background-color: rgba(255, 255, 255, 0.626);
+    background-color: rgba(255, 255, 255, 0.6);
     color: rgba(0, 0, 0, 0.5);
-    z-index: 9;
+    z-index: 20;
+    position: relative;
     overflow-x: hidden;
     width: calc(100% - 20px);
     margin-left: 0px;
     min-width: inherit;
     max-width: inherit;
+    border-radius: 10px;
+}
+
+#autocomplete-box::before {
+    padding-left: 20px;
+    margin: -20px;
+    margin-top: 0px;
+    border-radius: 10px;
+    content: "";
+    position: absolute;
+    z-index: -1;
+    min-width: inherit;
+    max-width: inherit;
+    height: 100%;
+    width: calc(100% - 20px);
+    backdrop-filter: blur(26px) saturate(110%);
 }
 
 #autocomplete-box ul {
@@ -106,7 +157,7 @@ input {
 }
 
 #autocomplete-box ul li:hover {
-    background: rgba(160, 160, 160, 0.267);
+    background: rgba(160, 160, 160, 0.4);
     display: block;
 }
 
@@ -117,6 +168,7 @@ input {
     display: none;
     width: inherit;
     min-width: inherit;
+    z-index: 0;
 }
 
 #weather-details-wrapper {
